# hermes-client-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.py  pyproject.toml
.github/workflows/: tests.yml
acp_data/: .gitignore
hermes-plugin/: README.md  __init__.py  plugin.yaml  state.json
hermes_agent/: __init__.py  __main__.py  app.py  audit_logger.py  config.py  log_manager.py  modules.py  rate_limiter.py  security.py  server.py  tray.py
hermes_agent/acp/: __init__.py  adapter.py  adapter_opencode.py  conversation_store.py  diagnostics.py  models.py  runtime_broker.py  session_manager.py  task_service.py
hermes_agent/audit/: __init__.py  logger.py  middleware.py  models.py  utils.py
hermes_agent/routers/: __init__.py  acp.py  capabilities.py  dashboard.py  exec.py  file.py  keyboard_.py  mouse.py  processes.py  screenshot.py  system.py  windows.py
hermes_agent/templates/: base.css  base.html  dashboard.js
hermes_agent/templates/pages/: acp.html  dashboard.html  errors.html  exec.html
scripts/: build.sh  build_exe.py  ci.py  ci.sh  ci_runner.py  install.sh  installer.ps1  setup.bat  start_agent.bat  start_agent.sh
tests/: test_acp.py  test_acp_diagnostics.py  test_acp_session.py  test_audit_logger.py  test_dashboard.py  test_endpoints.py  test_linux_compat.py  test_modules.py  test_plugin_config.py  test_plugin_handlers.py  test_security.py  test_tray.py
windows-control/: __init__.py  plugin.yaml  schemas.py  tools.py
windows_control/: README.md  __init__.py  plugin.yaml  schemas.py  state.json.example  tools.py
(+4 files in other folders)
