[project]
name = "hermes-client-agent"
version = "0.1.0"
description = "Remote machine control agent for the Hermes AI assistant"
authors = [{name = "Pascal de Selys"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pystray>=0.19.0",
    "pillow>=9.0.0",
    "jinja2>=3.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "psutil>=7.2.2",
    "pony>=0.7.19",
]

[tool.setuptools.packages.find]
include = ["hermes_agent*"]

[tool.ruff]
line-length = 360
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.0.0",
    "requests>=2.34.2",
]
